# notion-automation

./: .env.template  README.md  go.mod  main.go  pyproject.toml
internal/structs/: filter.go  page.go
notion/: create_page_in_db.py
pkg/gonotion/: gonotion.go  gonotion_test.go
